[#2] support for UI binder

--- a/Runtime/PinInject.asmdef
+++ b/Runtime/PinInject.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "PinInject",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "Unity.TextMeshPro"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
@@ -9,6 +11,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.textmeshpro",
+            "expression": "0.0.1",
+            "define": "PIN_TEXTMESHPRO"
+        }
+    ],
     "noEngineReferences": false
 }
