fix tests for scene inject root

--- a/Assets/Scripts/Runtime/PinInject.Tests.Runtime.asmdef
+++ b/Assets/Scripts/Runtime/PinInject.Tests.Runtime.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "PinInject",
         "PinInject.Tests.Common",
-        "UnityEngine.TestRunner"
+        "UnityEngine.TestRunner",
+        "Unity.TextMeshPro"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
