--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "com.cathei.pininject",
   "displayName": "PinInject",
-  "author": { "name": "Maxwell Keonwoo Kang" },
-  "version": "0.0.2",
+  "author": {
+    "name": "Maxwell Keonwoo Kang"
+  },
+  "version": "0.0.4",
   "unity": "2019.4",
   "description": "Minimalistic Dependency Injection tool for Unity",
   "license": "MIT",
