reorganize core and ui assembly

--- a/Runtime/UI/PinInject.UI.asmdef
+++ b/Runtime/UI/PinInject.UI.asmdef
@@ -1,7 +1,8 @@
 {
-    "name": "PinInject",
+    "name": "PinInject.UI",
     "rootNamespace": "",
     "references": [
+        "PinInject",
         "Unity.TextMeshPro"
     ],
     "includePlatforms": [],
